--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "analyze": "vite-bundle-analyzer"
@@ -76,6 +76,7 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.13",
     "terser": "^5.28.1",
     "typescript": "^5.5.3",
