--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "analyze": "vite-bundle-analyzer"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -76,12 +75,10 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
-    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.13",
     "terser": "^5.28.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8",
-    "vite-bundle-analyzer": "^0.8.1"
+    "vite": "^5.4.8"
   }
 }
